--- a/PROGPOE.csproj
+++ b/PROGPOE.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Classes\Ingredient.cs" />
     <Compile Include="Classes\Recipe.cs" />
+    <Compile Include="Classes\Step.cs" />
     <Compile Include="Classes\Worker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
