Added nUnit tests that actually work

--- a/ProgPOE.nUnitTests/ProgPOE.nUnitTests.csproj
+++ b/ProgPOE.nUnitTests/ProgPOE.nUnitTests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PROGPOE\PROGPOE.csproj" />
+    <ProjectReference Include="..\PROGPOE.csproj" />
   </ItemGroup>
 
 </Project>
